# research-trend-tracker

./: .coveragerc  .env.example  .env.params  .env.params.example  .gitignore  LICENSE  README.md  architecture.html  dashbord.html  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
.claude/rules/: plan-sync.md
.github/workflows/: ci.yml
.streamlit/: config.toml
airflow/dags/: arxiv_ingestion_dag.py  trend_scoring_dag.py
alembic/: env.py
alembic/versions/: 2323bc3b4eba_add_user_upload_tables.py  2ce13f2f4f5f_add_trend_scores_unique_constraint.py  4b36ddadb494_add_cooccurrence_processed_at_to_papers.py  5b11530242f2_initial_schema.py  5e0294e5bf63_add_is_admin_to_users.py  7cce8d1f124a_bump_ivfflat_lists_145k.py  a1b2c3d4e5f6_add_bridge_node_and_velocity_tables.py  b2c3d4e5f6a7_add_prediction_reports_table.py  c8b267deac08_add_paper_embeddings_table.py  c8d2f3a91e4b_add_apache_age_extension.py  de5d5e55eedf_add_graph_processed_at_to_papers.py  e1f2a3b4c5d6_add_users_table.py  e9f0a1b2c3d4_add_simulation_results_table.py  ed201e98a3cd_add_keyword_counts_unique_constraint.py  f3a9e1d07c52_v2_semantic_scholar_tables.py
app/: celery_app.py  main.py
app/analytics/: __init__.py  aggregator.py  schemas.py  topic_clusterer.py  trend_scorer.py  velocity_tracker.py
app/api/: deps.py  search.py
app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logger.py  metrics.py  models.py  rate_limiter.py  security.py
app/graph/: bridge_node_detector.py  entity_extractor.py  graph_analyzer.py  prediction_synthesizer.py  relation_builder.py  report_archive.py  schemas.py
app/ingestion/: __init__.py  arxiv_client.py  keyword_indexer.py  schemas.py  semantic_scholar.py  trend_writer.py
app/mcp_server/: __init__.py  server.py  tools.py
app/services/: embedding.py  rag.py  rag_prompt.py
app/simulation/: __init__.py  consensus.py  engine.py  grounding.py  personas.py  runner.py
app/summarizer/: __init__.py  chain.py  prompts.py  schemas.py
app/tasks/: cleanup.py  embed_papers.py  process_paper.py  run_simulation.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js  style.css
infra/docker/: Dockerfile  Dockerfile.postgres
scripts/: backfill_historical.py  build_cooccurrence.py  dashboard.py  restore_db.py  run_graph_pipeline.py  snapshot_db.py  validate_prediction.py
tests/: conftest.py
tests/integration/: test_admin_api.py  test_auth_api.py  test_graph_analysis_dag.py  test_graph_api.py  test_knowledge_graph_dag.py  test_papers_api.py  test_prediction_dag.py  test_semantic_scholar_dag.py  test_simulation_api.py  test_summarize_api.py  test_trend_writer.py  test_trends_api.py  test_upload_api.py  test_user_graph_api.py
(+74 files in other folders)
